My first D3 bar chart : )

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html, body {
     border: 1px solid gray;
     height: 600px;
     width: 80%;
-    margin: 0 auto;
+    margin: 30px auto;
     background-color: #f3f3f3;
     font-family: 'Roboto', sans-serif;
 }
